perf: 14 optimizations across chunk loading, anti-spam, region pool, and C++
Optimisations include:
- EpochIndex: linear scan → binary search, lazy allocation, O(1) hour dedup
- Region/RegionPool: removeViewer single pass, DimensionType world cache
- Anti-spam: zeroDifference half-matrix, pattern caching, HashSet, ArrayDeque
- Position: distance squared instead of sqrt/abs
- Ratelimiter: fewer map operations
- C++: packPalettedData template replaces std::function

Adds OPTIMIZATION_REPORT.md with detailed benchmarks.